--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,13 +11,13 @@ commands:
     steps:
       - run:
           name: Build Packer
-          command: packer build -var 'source_ami'=$source_ami -var 'ssh_username'=$ssh_username -var 'ami_users'=$ami_users ./ami.json
+          command: packer build ./ami.json
 
   validate_packer:
     steps:
       - run: #Validate packer
           name: Validate base
-          command: packer validate -var 'source_ami'=$source_ami -var 'ssh_username'=$ssh_username -var 'ami_users'=$ami_users ./ami.json
+          command: packer validate ./ami.json
 
 jobs:
   build:
