--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,12 +19,22 @@ commands:
           name: Validate base
           command: packer validate ./ami.json
 
+  install_awscli:
+    steps:
+      - run:
+          name: Install awscli
+          command: |
+            sudo apt update 
+            sudo apt install curl -y
+            curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
+            unzip awscliv2.zip
+            sudo ./aws/install
+
 jobs:
   build:
     executor: packer-image
     steps:
-      - checkout: # check out the code in the project directory
-          path: ~/ami
+      - install_awscli
       - validate_packer
       - build-packer
 
