--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,10 +4,20 @@ executors:
   packer-image: # declares a reusable executor
     working_directory: ~/ami # directory where steps will run
     docker:
-      - image: hashicorp/packer:1.1.1 # the primary container, where your job's commands are run
+      - image: circleci/python:2.7-jessie # the primary container, where your job's commands are run
 
 commands:
-  build-packer:
+  install_packages:
+    steps:
+      - run:
+          name: Install packages
+          command: |
+            sudo apt-get update && sudo apt-get install curl unzip -y
+            curl https://releases.hashicorp.com/packer/1.3.4/packer_1.3.4_linux_amd64.zip
+            unzip packer*.zip
+            chmod +x packer
+
+  build_packer:
     steps:
       - run:
           name: Build Packer
@@ -24,8 +34,6 @@ commands:
       - run:
           name: Install awscli
           command: |
-            sudo apt update 
-            sudo apt install curl -y
             curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
             unzip awscliv2.zip
             sudo ./aws/install
@@ -34,6 +42,7 @@ jobs:
   build:
     executor: packer-image
     steps:
+      - install_packages
       - install_awscli
       - validate_packer
       - build-packer
