--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -45,7 +45,7 @@ jobs:
       - install_packages
       - install_awscli
       - validate_packer
-      - build-packer
+      - build_packer
 
 workflows:
   build_deploy:
