--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,8 +12,9 @@ commands:
       - run:
           name: Install packages
           command: |
-            sudo apt-get update && sudo apt-get install curl unzip -y
-            curl https://releases.hashicorp.com/packer/1.3.4/packer_1.3.4_linux_amd64.zip
+            sudo apt-get update
+            sudo apt install wget unzip -y
+            wget -q https://releases.hashicorp.com/packer/1.3.4/packer_1.3.4_linux_amd64.zip
             unzip packer*.zip
             chmod +x packer
 
@@ -33,10 +34,7 @@ commands:
     steps:
       - run:
           name: Install awscli
-          command: |
-            curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
-            unzip awscliv2.zip
-            sudo ./aws/install
+          command: sudo pip install awscli
 
 jobs:
   build:
