--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,7 +2,6 @@ version: 2.1
 
 executors:
   packer-image: # declares a reusable executor
-    working_directory: ~/ami # directory where steps will run
     docker:
       - image: circleci/python:2.7-jessie # the primary container, where your job's commands are run
 
@@ -17,6 +16,8 @@ commands:
             wget -q https://releases.hashicorp.com/packer/1.3.4/packer_1.3.4_linux_amd64.zip
             unzip packer*.zip
             chmod +x packer
+            ls -al
+            pwd
 
   build_packer:
     steps:
