--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -31,8 +31,8 @@ jobs:
 workflows:
   build_deploy:
     jobs:
-      - build
-          # filters:
-          #   branches:
-          #     only:
-          #       - master
+      - build:
+          filters:
+            branches:
+              only:
+                - master
